<package format="2">
    <name>cerulean_sonar_ros</name>
    <version>0.1.0</version>
    <description>Driver for Cerulean Sonar devices.</description>
    <maintainer email="vid.rijavec@fri.uni-lj.si">MoffKalast</maintainer>
    <license>BSD</license>

    <author email="vid.rijavec@fri.uni-lj.si">MoffKalast</author>
    <depend>rospy</depend>
    <depend>dynamic_reconfigure</depend>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>tf2_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
